Remove Some Error's

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -23,7 +24,7 @@
           <div class="info-weather">
             <div class="weather">
               <img src="./images/cloud.png" alt="Cloud Image" />
-              <p class="temperature">16 <span>°C</span></p>
+              <p class="temperature">0<span>°C</span></p>
               <p class="description">Broken Clouds</p>
             </div>
           </div>
@@ -40,21 +41,28 @@
             </div>
             <p>Humidity</p>
         </div>
+    </div>
 
-        <div class="Wind">
-            <i class='bx bx-wind' ></i>
-            <div class="text">
-                <div class="info-wind">
-                    <span>
-                        0Km/h</p>
-                    </span>
-                </div>
-                <p>Wind Speed</p>
+    <div class="wind">
+        <i class='bx bx-wind' ></i>
+        <div class="text">
+            <div class="info-wind">
+                <span>
+                    0Km/h</p>
+                </span>
             </div>
+            <p>Wind Speed</p>
+        </div>
 
-    </div>
 </div>
-
     </div>
+
+    <div class="not-found">
+        <div class="box">
+            <img src="./images/404.png" alt="Not Found">
+            <p>Oops! Location Not Found!</p>
+        </div>
+    </div>
+    
   </body>
 </html>
