--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <button class="bx bx-search"></button>
       </div>
 
+      <p class="city-hide">City Hide</p>
+
       <div class="weather-box">
         <div class="box">
           <div class="info-weather">
